change nfs share directory

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,9 +27,9 @@ spec:
             - name: NFS_SERVER
               value: <<NFS Server IP>>
             - name: NFS_PATH
-              value: /srv/nfs/kubedata
+              value: /volumes
       volumes:
         - name: nfs-client-root
           nfs:
             server: <<NFS Server IP>>
-            path: /srv/nfs/kubedata
+            path: /volumes
